# pascal-monitor

./: CLAUDE.md  README.md  SPEC.md
data/: bathroom.csv  feeding.csv  sleep.csv  training.csv
web/: .gitignore  Makefile  alembic.ini  config.toml  pyproject.toml  requirements.txt
web/alembic/: env.py
web/alembic/versions/: ffdc5dfd98f0_initial_entries_table.py
web/app/: config.py  db.py  main.py  models.py  schemas.py
web/app/routes/: api.py  entries.py  export.py  pages.py
web/app/scripts/: export_csvs.py  import_existing_csvs.py
web/app/services/: csv_export.py  entries.py  summary.py
web/app/static/: style.css
web/app/templates/: 404.html  _category_fields.html  _edit_form.html  _entry_row.html  _event_types.html  _full_form.html  _toast.html  _undo_toast.html  base.html  home.html  summary.html  today.html
web/deploy/: README.md  cloudflared.example.yml  install_on_pi.sh  pascal-web.service
web/tests/: conftest.py  test_export.py  test_full_form.py  test_healthz.py  test_import.py  test_log.py  test_summary.py  test_today.py
